--- a/src/components/clickCount.module.scss
+++ b/src/components/clickCount.module.scss
@@ -1,5 +1,5 @@
 .container {
-    background-color: yellow;
+    background-color: rgb(142, 149, 115);
 }
 
 .btn {
@@ -7,7 +7,7 @@
     width: 70px;
     height: 50px;
 background-color: black;
-color: whitesmoke;
+color: rgb(252, 245, 245);
 font-family: 'Courier New', Courier, monospace;
 font-size: 20px;
 font-weight: bold;
