--- a/src/components/home/homeMyComponent.module.scss
+++ b/src/components/home/homeMyComponent.module.scss
@@ -1,7 +1,7 @@
 .container {
     width: 100%;
   height: 500px;
-  background: #022836;
+  background: rgb(165, 180, 184);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -9,15 +9,15 @@
 
   h1 {
     font-size: 52px;
-    color: rgb(238, 228, 229);
-    text-shadow: 2px 2px #7860ff;
+    color: rgb(3, 63, 101);
+    text-shadow: 2px 2px #05040c;
   }
 
   p {
     font-weight: 700;
     font-size: 25px;
     color: rgba(8, 17, 17, 0.78);
-    background: rgb(233, 206, 31);
+    background: rgb(243, 242, 238);
     padding: 10px;
   }
   
