--- a/src/components/home/homeMyComponent.module.scss
+++ b/src/components/home/homeMyComponent.module.scss
@@ -1,7 +1,7 @@
 .container {
     width: 100%;
   height: 500px;
-  background: rgb(165, 180, 184);
+  background: linear-gradient(90deg, rgb(242, 247, 248) 0%, rgb(165, 180, 184) 35%, rgb(242, 247, 248)100% );
   display: flex;
   flex-direction: column;
   justify-content: center;
