deleted extra page

--- a/src/components/home/homeMyComponent.module.scss
+++ b/src/components/home/homeMyComponent.module.scss
@@ -6,11 +6,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
 
   h1 {
     font-size: 52px;
     color: rgb(7, 73, 111);
-    text-shadow: 2px 2px #05040c;
+   
+    
     
   }
 
