--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -6,7 +6,8 @@
     .container ul li a {
     font-family: papyrus;
     font-size: larger;
-    color: rgb(9, 9, 88, 0.8);
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
     }
     
     li {
