--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -3,8 +3,8 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin-top: 10px;
+    margin-top: 130px;
     margin-left: 300px;
     margin-right: 300px;
-    margin-bottom: 20px;
+    //margin-bottom: 10px;
 }
