--- a/src/components/home/homeMyComponent.module.scss
+++ b/src/components/home/homeMyComponent.module.scss
@@ -1,7 +1,7 @@
 .container {
     width: 100%;
   height: 500px;
-  background: linear-gradient(90deg, rgb(242, 247, 248) 0%, rgb(165, 180, 184) 35%, rgb(242, 247, 248)100% );
+  background: linear-gradient(90deg, rgb(242, 247, 248) 0%, #eceff014 35%, rgb(242, 247, 248)100% );
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -10,7 +10,7 @@
 
   h1 {
     font-size: 52px;
-    color: rgb(7, 73, 111);
+    color: rgb(47, 49, 49);
    
     
     
