--- a/src/components/projects/projects.module.scss
+++ b/src/components/projects/projects.module.scss
@@ -1,7 +1,7 @@
 .cont {
     width: 100%;
     height: 600px;
-    background: rgb(165, 180, 184);
+    background: rgba(237, 241, 242, 0.379);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -17,19 +17,19 @@
 
 .box {
     display: grid;
-    height: 100px;
-    width: 130px;
-    background: rgb(235, 240, 240);
+    height: 150px;
+    width: 150px;
+    background: rgb(21, 19, 19);
     padding: 20px;
     margin: 20px;
-    border: 3px solid rgb(106, 108, 125);
-    border-radius: 10%;
+    border: 3px solid rgb(230, 231, 237);
+    border-radius: 5%;
 }
 
 .title {
     font-family: Optima;
-    font-size: 15;
-    background-color: rgb(153, 179, 153);
+    font-size: 25;
+    background-color: rgb(229, 233, 229);
     text-align: center;
 
 }
@@ -40,7 +40,7 @@
     text-align: center;
 }
 .a{
-    background-color: rgb(215, 227, 222);
+    background-color: rgb(227, 233, 231);
     text-align: center;
-    color: black;
+    color: rgb(9, 9, 9);
 }
