--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -1,7 +1,8 @@
 .container {
     width: 100%;
   height: 500px;
-  background: linear-gradient(90deg, rgb(242, 247, 248) 0%, #eceff014 35%, rgb(242, 247, 248)100% );
+  //background: linear-gradient(90deg, rgb(242, 247, 248) 0%, #eceff014 35%, rgb(242, 247, 248)100% );
+  background: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
