--- a/src/components/projects/projects.module.scss
+++ b/src/components/projects/projects.module.scss
@@ -1,7 +1,8 @@
 .cont {
     width: 100%;
     height: 600px;
-    background: rgba(237, 241, 242, 0.379);
+    //background: rgba(237, 241, 242, 0.379);
+    background: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
